pre_commit_submit_output_3.txt
trim trailing whitespace.................................................Passed
fix end of files.........................................................Passed
check yaml...............................................................Passed
check toml...............................................................Passed
check json...........................................(no files to check)Skipped
ruff (legacy alias)......................................................Failed
- hook id: ruff
- exit code: 1

invalid-syntax: Expected ')', found newline
  --> src/coreason_vault/cipher.py:42:34
   |
40 |             raise EncryptionError(f"Encryption failed due to network error: {e}") from e
41 |
42 |     @retry(  # type: ignore[misc]
   |                                  ^
43 |     @retry(  # type: ignore[misc]
44 |         retry=retry_if_exception_type((requests.exceptions.RequestException, hvac.exceptions.VaultDown)),
   |

Found 1 error.

ruff format..............................................................Failed
- hook id: ruff-format
- exit code: 2

error: Failed to parse src/coreason_vault/cipher.py:42:34: Expected ')', found newline
20 files left unchanged

mypy.....................................................................Failed
- hook id: mypy
- exit code: 2

src/coreason_vault/cipher.py:42: error: '(' was never closed  [syntax]
Found 1 error in 1 file (errors prevented further checking)

Hadolint.................................................................Passed
